minikube_deploy/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    name: django
    instance: django-inst
    version: "1.0.0"
    component: server
    part-of: django
spec:
  replicas: 3
  selector:
    matchLabels:
      name: DjangoApp 
  template:
    metadata:
      labels:
        name: DjangoApp
    spec:
      containers:
      - name: djangoapp
        image: django_app
        imagePullPolicy: Never
        ports:
        - containerPort: 80
