minikube_deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    name: DjangoApp 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
