minikube_deploy/ingress-django.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-service
            port:
              number: 80
